--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
               alt="User photo"
               class="user-nav__user-photo"
             />
-            <span class="user-nav__user-name">Dmytro Filonenko</span>
+            <a href="https://t.me/filonenkod" class="user-nav__user-name"
+              >Dmytro</a
+            >
           </div>
         </nav>
       </header>
